[gd_scene load_steps=6 format=3 uid="uid://rebf5nl4kd1r"]

[ext_resource type="Script" path="res://Levels/level_17_last_fight.gd" id="1_1hxnf"]
[ext_resource type="PackedScene" uid="uid://b5heeqig4y3my" path="res://Entities/Hero/hero.tscn" id="1_jr1jd"]
[ext_resource type="TileSet" uid="uid://ckdj8m24olhk1" path="res://Assets/tilemap.tres" id="2_vgf4c"]
[ext_resource type="PackedScene" uid="uid://caeeg0qxnw4sc" path="res://World/Trap/trap.tscn" id="4_7b4wn"]
[ext_resource type="PackedScene" uid="uid://cl55aqe2483w6" path="res://Entities/VampireBoss/vampire_boss.tscn" id="5_eko8m"]

[node name="Level-17-Last-Fight" type="Node2D" groups=["level"]]
script = ExtResource("1_1hxnf")

[node name="Hero" parent="." instance=ExtResource("1_jr1jd")]
position = Vector2(0, -48)

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_vgf4c")
format = 2
layer_0/name = "Walls"
layer_0/tile_data = PackedInt32Array(131062, 131072, 1, 131063, 131072, 1, 131064, 131072, 1, 131065, 131072, 1, 131066, 131072, 1, 131067, 131072, 1, 131068, 131072, 1, 131069, 131072, 1, 131070, 131072, 1, 131071, 131072, 1, 65536, 131072, 1, 65537, 131072, 1, 65538, 131072, 1, 65539, 131072, 1, 65540, 131072, 1, 65541, 131072, 1, 65542, 131072, 1, 65543, 131072, 1, 65544, 131072, 1, 65545, 131072, 1, 65546, 131072, 1, 65547, 131072, 1, 131061, 131072, 1, 131060, 131072, 1, 12, 65536, 2, -65524, 65536, 2, -131060, 65536, 2, -196596, 65536, 2, -262132, 65536, 2, -327668, 65536, 2, -393204, 65536, 2, -458740, 65536, 2, -524276, 65536, 2, -589812, 65536, 2, -655348, 65536, 2, -589837, 196608, 2, -524301, 196608, 2, -458765, 196608, 2, -393229, 196608, 2, -327693, 196608, 2, -262157, 196608, 2, -196621, 196608, 2, -131085, 196608, 2, -65549, 196608, 2, -13, 196608, 2, 65523, 196608, 2, -786445, 196608, 2, -720909, 196608, 2, -655373, 196608, 2, -851980, 131072, 3, -851979, 131072, 3, -851978, 131072, 3, -851977, 131072, 3, -851976, 131072, 3, -851975, 131072, 3, -851974, 131072, 3, -851973, 131072, 3, -851972, 131072, 3, -851971, 131072, 3, -851970, 131072, 3, -851969, 131072, 3, -917504, 131072, 3, -917503, 131072, 3, -917502, 131072, 3, -917501, 131072, 3, -917500, 131072, 3, -917499, 131072, 3, -917498, 131072, 3, -917497, 131072, 3, -917496, 131072, 3, -917495, 131072, 3, -917494, 131072, 3, -917493, 131072, 3, -851956, 65536, 2, -786420, 65536, 2, -720884, 65536, 2, -1, 65536, 3, -65536, 196608, 3, -65537, 65536, 2, -131073, 65536, 1, -131072, 196608, 2, -196608, 196608, 1, 65524, 196608, 1, 11, 65536, 1, -851981, 393216, 3, -917492, 327680, 3, 65548, 327680, 2, 131059, 393216, 2)
layer_1/name = "Paint"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-786444, 720896, 1, -720908, 720896, 2, -655372, 720896, 2, -589836, 720896, 2, -524300, 720896, 2, -458764, 720896, 2, -393228, 720896, 2, -327692, 720896, 2, -262156, 720896, 2, -196620, 720896, 2, -131084, 720896, 2, -786443, 786432, 1, -720907, 786432, 2, -655371, 786432, 2, -589835, 786432, 2, -524299, 786432, 2, -458763, 786432, 2, -393227, 786432, 2, -327691, 786432, 2, -262155, 786432, 2, -196619, 786432, 2, -131083, 786432, 2, -786442, 786432, 1, -720906, 786432, 2, -655370, 786432, 2, -589834, 786432, 2, -524298, 786432, 2, -458762, 786432, 2, -393226, 786432, 2, -327690, 786432, 2, -262154, 786432, 2, -196618, 786432, 2, -131082, 786432, 2, -786441, 786432, 1, -720905, 786432, 2, -655369, 786432, 2, -589833, 786432, 2, -524297, 786432, 2, -458761, 786432, 2, -393225, 786432, 2, -327689, 786432, 2, -262153, 786432, 2, -196617, 786432, 2, -131081, 786432, 2, -786440, 786432, 1, -720904, 786432, 2, -655368, 786432, 2, -589832, 786432, 2, -524296, 786432, 2, -458760, 786432, 2, -393224, 786432, 2, -327688, 786432, 2, -262152, 786432, 2, -196616, 786432, 2, -131080, 786432, 2, -786439, 786432, 1, -720903, 786432, 2, -655367, 786432, 2, -589831, 786432, 2, -524295, 786432, 2, -458759, 786432, 2, -393223, 786432, 2, -327687, 786432, 2, -262151, 786432, 2, -196615, 786432, 2, -131079, 786432, 2, -786438, 786432, 1, -720902, 786432, 2, -655366, 786432, 2, -589830, 786432, 2, -524294, 786432, 2, -458758, 786432, 2, -393222, 786432, 2, -327686, 786432, 2, -262150, 786432, 2, -196614, 786432, 2, -131078, 786432, 2, -786437, 786432, 1, -720901, 786432, 2, -655365, 786432, 2, -589829, 786432, 2, -524293, 786432, 2, -458757, 786432, 2, -393221, 786432, 2, -327685, 786432, 2, -262149, 786432, 2, -196613, 786432, 2, -131077, 786432, 2, -786436, 786432, 1, -720900, 786432, 2, -655364, 786432, 2, -589828, 786432, 2, -524292, 786432, 2, -458756, 786432, 2, -393220, 786432, 2, -327684, 786432, 2, -262148, 786432, 2, -196612, 786432, 2, -131076, 786432, 2, -786435, 786432, 1, -720899, 786432, 2, -655363, 786432, 2, -589827, 786432, 2, -524291, 786432, 2, -458755, 786432, 2, -393219, 786432, 2, -327683, 786432, 2, -262147, 786432, 2, -196611, 786432, 2, -131075, 786432, 2, -786434, 786432, 1, -720898, 786432, 2, -655362, 786432, 2, -589826, 786432, 2, -524290, 786432, 2, -458754, 786432, 2, -393218, 786432, 2, -327682, 786432, 2, -262146, 786432, 2, -196610, 786432, 2, -131074, 786432, 2, -786433, 786432, 1, -720897, 786432, 2, -655361, 786432, 2, -589825, 786432, 2, -524289, 786432, 2, -458753, 786432, 2, -393217, 786432, 2, -327681, 786432, 2, -262145, 786432, 2, -196609, 786432, 2, -131073, 786432, 2, -851968, 786432, 1, -786432, 786432, 2, -720896, 786432, 2, -655360, 786432, 2, -589824, 786432, 2, -524288, 786432, 2, -458752, 786432, 2, -393216, 786432, 2, -327680, 786432, 2, -262144, 786432, 2, -196608, 786432, 2, -851967, 786432, 1, -786431, 786432, 2, -720895, 786432, 2, -655359, 786432, 2, -589823, 786432, 2, -524287, 786432, 2, -458751, 786432, 2, -393215, 786432, 2, -327679, 786432, 2, -262143, 786432, 2, -196607, 786432, 2, -851966, 786432, 1, -786430, 786432, 2, -720894, 786432, 2, -655358, 786432, 2, -589822, 786432, 2, -524286, 786432, 2, -458750, 786432, 2, -393214, 786432, 2, -327678, 786432, 2, -262142, 786432, 2, -196606, 786432, 2, -851965, 786432, 1, -786429, 786432, 2, -720893, 786432, 2, -655357, 786432, 2, -589821, 786432, 2, -524285, 786432, 2, -458749, 786432, 2, -393213, 786432, 2, -327677, 786432, 2, -262141, 786432, 2, -196605, 786432, 2, -851964, 786432, 1, -786428, 786432, 2, -720892, 786432, 2, -655356, 786432, 2, -589820, 786432, 2, -524284, 786432, 2, -458748, 786432, 2, -393212, 786432, 2, -327676, 786432, 2, -262140, 786432, 2, -196604, 786432, 2, -851963, 786432, 1, -786427, 786432, 2, -720891, 786432, 2, -655355, 786432, 2, -589819, 786432, 2, -524283, 786432, 2, -458747, 786432, 2, -393211, 786432, 2, -327675, 786432, 2, -262139, 786432, 2, -196603, 786432, 2, -851962, 786432, 1, -786426, 786432, 2, -720890, 786432, 2, -655354, 786432, 2, -589818, 786432, 2, -524282, 786432, 2, -458746, 786432, 2, -393210, 786432, 2, -327674, 786432, 2, -262138, 786432, 2, -196602, 786432, 2, -851961, 786432, 1, -786425, 786432, 2, -720889, 786432, 2, -655353, 786432, 2, -589817, 786432, 2, -524281, 786432, 2, -458745, 786432, 2, -393209, 786432, 2, -327673, 786432, 2, -262137, 786432, 2, -196601, 786432, 2, -851960, 786432, 1, -786424, 786432, 2, -720888, 786432, 2, -655352, 786432, 2, -589816, 786432, 2, -524280, 786432, 2, -458744, 786432, 2, -393208, 786432, 2, -327672, 786432, 2, -262136, 786432, 2, -196600, 786432, 2, -851959, 786432, 1, -786423, 786432, 2, -720887, 786432, 2, -655351, 786432, 2, -589815, 786432, 2, -524279, 786432, 2, -458743, 786432, 2, -393207, 786432, 2, -327671, 786432, 2, -262135, 786432, 2, -196599, 786432, 2, -851958, 786432, 1, -786422, 786432, 2, -720886, 786432, 2, -655350, 786432, 2, -589814, 786432, 2, -524278, 786432, 2, -458742, 786432, 2, -393206, 786432, 2, -327670, 786432, 2, -262134, 786432, 2, -196598, 786432, 2, -851957, 851968, 1, -786421, 851968, 2, -720885, 851968, 2, -655349, 851968, 2, -589813, 851968, 2, -524277, 851968, 2, -458741, 851968, 2, -393205, 851968, 2, -327669, 851968, 2, -262133, 851968, 2, -196597, 851968, 2, -65548, 720896, 2, -12, 720896, 2, 65524, 720896, 2, -65547, 786432, 2, -11, 786432, 2, 65525, 786432, 2, -65546, 786432, 2, -10, 786432, 2, 65526, 786432, 2, -65545, 786432, 2, -9, 786432, 2, 65527, 786432, 2, -65544, 786432, 2, -8, 786432, 2, 65528, 786432, 2, -65543, 786432, 2, -7, 786432, 2, 65529, 786432, 2, -65542, 786432, 2, -6, 786432, 2, 65530, 786432, 2, -65541, 786432, 2, -5, 786432, 2, 65531, 786432, 2, -65540, 786432, 2, -4, 786432, 2, 65532, 786432, 2, -65539, 786432, 2, -3, 786432, 2, 65533, 786432, 2, -65538, 786432, 2, -2, 786432, 2, 65534, 786432, 2, -65537, 786432, 2, -1, 786432, 2, 65535, 786432, 2, -131072, 786432, 2, -65536, 786432, 2, 0, 786432, 2, -131071, 786432, 2, -65535, 786432, 2, 1, 786432, 2, -131070, 786432, 2, -65534, 786432, 2, 2, 786432, 2, -131069, 786432, 2, -65533, 786432, 2, 3, 786432, 2, -131068, 786432, 2, -65532, 786432, 2, 4, 786432, 2, -131067, 786432, 2, -65531, 786432, 2, 5, 786432, 2, -131066, 786432, 2, -65530, 786432, 2, 6, 786432, 2, -131065, 786432, 2, -65529, 786432, 2, 7, 786432, 2, -131064, 786432, 2, -65528, 786432, 2, 8, 786432, 2, -131063, 786432, 2, -65527, 786432, 2, 9, 786432, 2, -131062, 786432, 2, -65526, 786432, 2, 10, 786432, 2, -131061, 851968, 2, -65525, 851968, 2, 11, 851968, 2)
layer_2/name = "Objects"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Trap" parent="." instance=ExtResource("4_7b4wn")]
position = Vector2(-192, 0)

[node name="Trap2" parent="." instance=ExtResource("4_7b4wn")]
position = Vector2(-192, -16)

[node name="Trap3" parent="." instance=ExtResource("4_7b4wn")]
position = Vector2(-192, -32)

[node name="VampireBoss" parent="." instance=ExtResource("5_eko8m")]
position = Vector2(0, -136)
